[workspace]
resolver = "3"
members = [
    "aead",
    "cipher",
    "crypto",
    "crypto-common",
    "digest",
    "elliptic-curve",
    "kem",
    "password-hash",
    "universal-hash",
    "signature",
]

[patch.crates-io]
digest = { path = "digest" }
signature = { path = "signature" }

block-padding = { git = "https://github.com/RustCrypto/utils", branch = "block-padding/static_bound" }
getrandom = { git = "https://github.com/rust-random/getrandom" }
