[workspace]
resolver = "3"
members = [
    "aead",
    "cipher",
    "crypto",
    "crypto-common",
    "digest",
    "elliptic-curve",
    "kdf",
    "kem",
    "password-hash",
    "universal-hash",
    "signature",
]

[patch.crates-io]
digest = { path = "digest" }
signature = { path = "signature" }
