[workspace]
resolver = "3"
members = [
    "aead",
    "cipher",
    "crypto",
    "crypto-common",
    "digest",
    "elliptic-curve",
    "kdf",
    "kem",
    "password-hash",
    "universal-hash",
    "signature",
]

[patch.crates-io]
crypto-common = { path = "crypto-common" }
digest = { path = "digest" }
signature = { path = "signature" }

crypto-bigint = { git = "https://github.com/RustCrypto/crypto-bigint" }
rustcrypto-ff = { git = "https://github.com/RustCrypto/ff", branch = "rand_core/v0.10.0-rc-6" }
rustcrypto-group = { git = "https://github.com/RustCrypto/group", branch = "rand_core/v0.10.0-rc-6" }
