[package]
name = "aead"
version = "0.6.0-rc.10"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/aead"
readme = "README.md"
repository = "https://github.com/RustCrypto/traits"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "encryption"]
categories = ["cryptography", "no-std"]
description = "Traits for Authenticated Encryption with Associated Data (AEAD) algorithms"

[dependencies]
common = { version = "0.2", package = "crypto-common" }
inout = "0.2.2"

# optional dependencies
blobby = { version = "0.4", optional = true }

[features]
alloc = []
dev = ["blobby", "alloc"]
getrandom = ["common/getrandom", "rand_core"]
rand_core = ["common/rand_core"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
