[package]
name = "async-signature"
description = "Traits for cryptographic signature algorithms (e.g. ECDSA, Ed25519)"
version = "0.6.0-pre.1"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/async-signature"
homepage = "https://github.com/RustCrypto/traits/tree/master/async-signature"
repository = "https://github.com/RustCrypto/traits"
readme = "README.md"
keywords = ["crypto", "ecdsa", "ed25519", "signature", "signing"]
categories = ["cryptography", "no-std"]
edition = "2021"
rust-version = "1.75"

[dependencies]
signature = "=2.3.0-pre.4"

[features]
digest = ["signature/digest"]
std = ["signature/std"]
rand_core = ["signature/rand_core"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
