[package]
name = "async-signature"
version = "0.6.0-pre.4"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/async-signature"
readme = "README.md"
repository = "https://github.com/RustCrypto/traits"
license = "Apache-2.0 OR MIT"
keywords = ["crypto", "ecdsa", "ed25519", "signature", "signing"]
categories = ["cryptography", "no-std"]
description = "Traits for cryptographic signature algorithms (e.g. ECDSA, Ed25519)"

[dependencies]
signature = "=3.0.0-pre"

[features]
digest = ["signature/digest"]
std = []
rand_core = ["signature/rand_core"]

[package.metadata.docs.rs]
all-features = true
