[package]
name = "block-cipher-trait"
version = "0.6.0"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "Traits for description of block ciphers"
documentation = "https://docs.rs/block-cipher-trait"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "block-cipher", "trait"]
categories = ["cryptography", "no-std"]

[dependencies]
generic-array = "0.12"

[features]
dev = []
std = []

[badges]
travis-ci = { repository = "RustCrypto/traits" }

[package.metadata.docs.rs]
features = [ "std" ]
