[package]
name = "cipher"
description = "Traits for describing block ciphers and stream ciphers"
version = "0.5.0-pre.8"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/cipher"
repository = "https://github.com/RustCrypto/traits"
keywords = ["crypto", "block-cipher", "stream-cipher", "trait"]
categories = ["cryptography", "no-std"]

[dependencies]
crypto-common = { version = "0.2.0-rc.2", path = "../crypto-common" }
inout = "0.2.0-rc.4"

# optional dependencies
blobby = { version = "0.4.0-pre.0", optional = true }
zeroize = { version = "1.8", optional = true, default-features = false }

[features]
alloc = []
block-padding = ["inout/block-padding"]
# Enable random key and IV generation methods
rand_core = ["crypto-common/rand_core"]
os_rng = ["crypto-common/os_rng", "rand_core"]
dev = ["blobby"]
zeroize = ["dep:zeroize", "crypto-common/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
