[package]
name = "cipher"
version = "0.5.0-rc.1"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/cipher"
readme = "README.md"
repository = "https://github.com/RustCrypto/traits"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "block-cipher", "stream-cipher", "trait"]
categories = ["cryptography", "no-std"]
description = "Traits for describing block ciphers and stream ciphers"

[dependencies]
crypto-common = { version = "0.2.0-rc.4", path = "../crypto-common" }
inout = "0.2.0-rc.6"

# optional dependencies
blobby = { version = "0.4.0-pre.1", optional = true }
block-buffer = { version = "0.11.0-rc.5", optional = true }
zeroize = { version = "1.8", optional = true, default-features = false }

[dev-dependencies]
hex-literal = "1"

[features]
alloc = []
block-padding = ["inout/block-padding"]
stream-wrapper = ["block-buffer"]
# Enable random key and IV generation methods
getrandom = ["crypto-common/getrandom"]
rand_core = ["crypto-common/rand_core"]
dev = ["blobby"]
zeroize = ["dep:zeroize", "crypto-common/zeroize", "block-buffer?/zeroize"]

[package.metadata.docs.rs]
all-features = true
