[package]
name = "crypto-common"
version = "0.2.0-rc.3"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/crypto-common"
readme = "README.md"
repository = "https://github.com/RustCrypto/traits"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "traits"]
categories = ["cryptography", "no-std"]
description = "Common cryptographic traits"

[dependencies]
hybrid-array = "0.4"

# optional dependencies
rand_core = { version = "0.9", optional = true }

[features]
os_rng = ["rand_core/os_rng", "rand_core"]
rand_core = ["dep:rand_core"]
zeroize = ["hybrid-array/zeroize"]

[package.metadata.docs.rs]
all-features = true
