[package]
name = "crypto-common"
version = "0.2.0-rc.4"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/crypto-common"
readme = "README.md"
repository = "https://github.com/RustCrypto/traits"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "traits"]
categories = ["cryptography", "no-std"]
description = "Common cryptographic traits"

[dependencies]
hybrid-array = "0.4"

# optional dependencies
getrandom = { version = "0.3", optional = true, default-features = false }
rand_core = { version = "0.10.0-rc-2", optional = true }

[features]
getrandom = ["dep:getrandom"]
rand_core = ["dep:rand_core"]
zeroize = ["hybrid-array/zeroize"]

[package.metadata.docs.rs]
all-features = true
