[package]
name = "crypto-common"
version = "0.2.0-rc.10"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/crypto-common"
readme = "README.md"
repository = "https://github.com/RustCrypto/traits"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "traits"]
categories = ["cryptography", "no-std"]
description = "Common cryptographic traits"

[dependencies]
hybrid-array = "0.4"

# optional dependencies
getrandom = { version = "0.4.0-rc.0", optional = true, features = ["sys_rng"] }
rand_core = { version = "0.10.0-rc-4", optional = true }

[features]
getrandom = ["rand_core", "dep:getrandom"]
rand_core = ["dep:rand_core"]
zeroize = ["hybrid-array/zeroize"]

[package.metadata.docs.rs]
all-features = true
