[package]
name = "crypto-mac"
description = "Trait for Message Authentication Code (MAC) algorithms"
version = "0.12.0-pre"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/crypto-mac"
repository = "https://github.com/RustCrypto/traits"
keywords = ["crypto", "mac"]
categories = ["cryptography", "no-std"]

[dependencies]
generic-array = "0.14"
crypto-common = { version = "=0.1.0-pre", path = "../crypto-common" }
cipher = { version = "=0.4.0-pre", path = "../cipher" }
subtle = { version = "2", default-features = false }

blobby = { version = "0.3", optional = true }
rand_core = { version = "0.6", optional = true }

[features]
dev = ["blobby"]
core-api = ["crypto-common/core-api"]
std = ["crypto-common/std", "rand_core/std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
