[package]
name = "crypto"
version = "0.6.0-pre"
description = "Facade crate for all of the RustCrypto traits (e.g. `aead`, `cipher`, `digest`)"
authors = ["The RustCrypto Project Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/crypto"
repository = "https://github.com/RustCrypto/traits"
keywords = ["crypto", "encryption", "rustcrypto"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
crypto-common = { version = "0.2.0-rc.1", default-features = false }

# optional dependencies
aead = { version = "0.6.0-rc.0", optional = true }
cipher = { version = "0.5.0-pre.7", optional = true }
digest = { version = "0.11.0-pre.9", optional = true, features = ["mac"] }
elliptic-curve = { version = "0.14.0-rc.1", optional = true }
password-hash = { version = "0.6.0-rc.0", optional = true }
signature = { version = "2.3.0-pre.6", optional = true, default-features = false }
universal-hash = { version = "0.6.0-rc.0", optional = true }

[features]
std = [
    "digest/std",
    "elliptic-curve/std",
    "signature/std",
]
os_rng = ["crypto-common/os_rng"]
rand_core = ["crypto-common/rand_core"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
