[package]
name = "crypto"
version = "0.6.0-pre"
authors = ["The RustCrypto Project Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/crypto"
readme = "README.md"
repository = "https://github.com/RustCrypto/traits"
license = "Apache-2.0 OR MIT"
keywords = ["crypto", "encryption", "rustcrypto"]
categories = ["cryptography", "no-std"]
description = "Facade crate for all of the RustCrypto traits (e.g. `aead`, `cipher`, `digest`)"

[dependencies]
common = { version = "0.2", package = "crypto-common", path = "../crypto-common", default-features = false }

# optional dependencies
aead = { version = "0.6.0-rc.5", path = "../aead", optional = true }
cipher = { version = "0.5", path = "../cipher", optional = true }
digest = { version = "0.11.0-rc.5", path = "../digest", optional = true, features = ["mac"] }
elliptic-curve = { version = "0.14.0-rc.17", path = "../elliptic-curve", optional = true }
password-hash = { version = "0.6.0-rc.6", path = "../password-hash", optional = true }
signature = { version = "3.0.0-rc.6", path = "../signature", optional = true, default-features = false }
universal-hash = { version = "0.6.0-rc.4", path = "../universal-hash", optional = true }

[features]
std = ["elliptic-curve/std"]
getrandom = ["common/getrandom"]
rand_core = ["common/rand_core"]

[package.metadata.docs.rs]
all-features = true
