[package]
name = "cryptography"
version = "0.2.0"
authors = ["The RustCrypto Project Developers"]
license = "Apache-2.0 OR MIT"
description = "Facade crate for the RustCrypto project's traits"
documentation = "https://docs.rs/cryptography"
repository = "https://github.com/RustCrypto/traits"
keywords = ["crypto", "encryption", "rustcrypto"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2018"

[dependencies]
aead = { version = "0.3", optional = true, path = "../aead" }
block-cipher = { version = "0.8", optional = true, path = "../block-cipher" }
digest = { version = "0.9", optional = true, path = "../digest" }
elliptic-curve = { version = "= 0.5.0-pre", optional = true, path = "../elliptic-curve" }
mac = { version = "0.9", package = "crypto-mac", optional = true, path = "../crypto-mac" }
signature = { version = "1.1.0", optional = true, default-features = false, path = "../signature" }
stream-cipher = { version = "0.6", optional = true, path = "../stream-cipher" }
universal-hash = { version = "0.4", optional = true, path = "../universal-hash" }

[package.metadata.docs.rs]
all-features = true
