[package]
name = "digest"
version = "0.11.0-rc.12"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/digest"
readme = "README.md"
repository = "https://github.com/RustCrypto/traits"
license = "MIT OR Apache-2.0"
keywords = ["digest", "crypto", "hash"]
categories = ["cryptography", "no-std"]
description = "Traits for cryptographic hash functions and message authentication codes"

[dependencies]
common = { version = "0.2", package = "crypto-common" }

# optional dependencies
block-buffer = { version = "0.11", optional = true }
blobby = { version = "0.4", optional = true }
const-oid = { version = "0.10", optional = true }
ctutils = { version = "0.4", optional = true }
zeroize = { version = "1.7", optional = true, default-features = false }

[dev-dependencies]
sha2 = "0.11.0-rc.5"

[features]
default = ["block-api"]
block-api = ["block-buffer"] # Enable block API traits
mac = ["dep:ctutils"] # Enable MAC traits
rand_core = ["common/rand_core"] # Enable random key generation methods
getrandom = ["common/getrandom", "rand_core"]
oid = ["const-oid"]
zeroize = ["dep:zeroize", "block-buffer?/zeroize"]
alloc = []
dev = ["blobby"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
