[package]
name = "elliptic-curve"
version = "0.14.0-rc.22"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/elliptic-curve"
readme = "README.md"
repository = "https://github.com/RustCrypto/traits"
license = "Apache-2.0 OR MIT"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "ecc", "elliptic", "weierstrass"]
description = """
General purpose Elliptic Curve Cryptography (ECC) support, including types
and traits for representing various elliptic curve forms, scalars, points,
and public/secret keys composed thereof.
"""

[dependencies.bigint]
package = "crypto-bigint"
version = "0.7.0-rc.20"
default-features = false
features = ["hybrid-array", "rand_core", "subtle", "zeroize"]

[dependencies]
array = { package = "hybrid-array", version = "0.4", default-features = false, features = ["zeroize"] }
base16ct = "1"
common = { package = "crypto-common", version = "0.2.0-rc.10", features = ["rand_core"] }
rand_core = { version = "0.10.0-rc-5", default-features = false }
subtle = { version = "2.6", default-features = false }
zeroize = { version = "1.7", default-features = false }

# optional dependencies
digest = { version = "0.11.0-rc.4", optional = true }
ff = { version = "=0.14.0-pre.0", package = "rustcrypto-ff", optional = true, default-features = false }
getrandom = { version = "0.4.0-rc.0", optional = true }
group = { version = "=0.14.0-pre.0", package = "rustcrypto-group", optional = true, default-features = false }
hkdf = { version = "0.13.0-rc.3", optional = true, default-features = false }
hex-literal = { version = "1", optional = true }
once_cell = { version = "1.21", optional = true, default-features = false }
pem-rfc7468 = { version = "1.0.0-rc.2", optional = true, features = ["alloc"] }
pkcs8 = { version = "0.11.0-rc.8", optional = true, default-features = false }
sec1 = { version = "0.8.0-rc.11", optional = true, features = ["ctutils", "subtle", "zeroize"] }
serdect = { version = "0.4", optional = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
hex-literal = "1"

[features]
default = ["arithmetic"]
alloc = [
    "base16ct/alloc",
    "ff?/alloc",
    "group?/alloc",
    "array/alloc",
    "pkcs8?/alloc",
    "sec1?/alloc",
    "zeroize/alloc"
]
std = [
    "alloc",
    "once_cell?/std",
    "pkcs8?/std",
    "sec1?/std"
]

arithmetic = ["group"]
basepoint-table = ["arithmetic"]
critical-section = ["basepoint-table", "once_cell/critical-section"]
bits = ["arithmetic", "ff/bits"]
dev = ["arithmetic", "dep:hex-literal", "pem", "pkcs8"]
ecdh = ["arithmetic", "digest", "dep:hkdf"]
getrandom = ["dep:getrandom", "arithmetic", "bigint/getrandom", "common/getrandom"]
group = ["dep:group", "ff"]
pkcs8 = ["dep:pkcs8", "sec1"]
pem = ["dep:pem-rfc7468", "alloc", "arithmetic", "pkcs8/pem", "sec1/pem"]
serde = ["dep:serdect", "alloc", "pkcs8", "sec1/serde"]

[package.metadata.docs.rs]
features = ["basepoint-table", "bits", "ecdh", "pem", "std"]
