[package]
name = "kdf"
version = "0.1.0-pre.1"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/kdf"
readme = "README.md"
repository = "https://github.com/RustCrypto/traits"
license = "Apache-2.0 OR MIT"
keywords = ["crypto"]
categories = ["cryptography", "no-std"]
description = "Traits for Key Derivation Functions"
