[package]
name = "kem"
version = "0.4.0-pre.1"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/kem"
readme = "README.md"
repository = "https://github.com/RustCrypto/traits"
license = "Apache-2.0 OR MIT"
keywords = ["crypto"]
categories = ["cryptography", "no-std"]
description = "Traits for key encapsulation mechanisms"

[dependencies]
crypto-common = { version = "0.2.0-rc.4", features = ["rand_core"], path = "../crypto-common" }
rand_core = "0.9"
zeroize = { version = "1.7", default-features = false }

[package.metadata.docs.rs]
all-features = true

[lib]
doctest = false
