[package]
name = "kem"
version = "0.4.0-rc.3"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/kem"
readme = "README.md"
repository = "https://github.com/RustCrypto/traits"
license = "Apache-2.0 OR MIT"
keywords = ["crypto"]
categories = ["cryptography", "no-std"]
description = """
Traits for Key Encapsulation Mechanisms (KEMs): public-key cryptosystems designed to enable a sender
(a.k.a. encapsulator) to generate and encrypt a short secret key and transmit it to a receiver
(a.k.a. decapsulator) confidentially
"""

[dependencies]
crypto-common = { version = "0.2.0-rc.10", features = ["rand_core"] }
rand_core = "0.10.0-rc-5"

[features]
getrandom = ["crypto-common/getrandom"]

[package.metadata.docs.rs]
all-features = true

# TODO(tarcieri): make README.md an actually valid example
[lib]
doctest = false
