[package]
name = "password-hash"
version = "0.6.0-rc.4"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/password-hash"
readme = "README.md"
repository = "https://github.com/RustCrypto/traits"
license = "MIT OR Apache-2.0"
categories = ["authentication", "cryptography", "no-std"]
keywords = ["crypt", "mcf", "password", "pbkdf", "phc"]
description = """
Traits which describe the functionality of password hashing algorithms,
as well as a `no_std`-friendly implementation of the PHC string format
(a well-defined subset of the Modular Crypt Format a.k.a. MCF)
"""

[dependencies]
phc = { version = "0.6.0-rc.0", optional = true, default-features = false }

[features]
alloc = ["phc?/alloc"]

[package.metadata.docs.rs]
all-features = true
